# hydractify

./: .editorconfig  .eslintrc.js  .gitignore  Cargo.toml  Makefile.toml  README.md  config.example.toml  config.json.example  example.env  flake.nix  package.json  tsconfig.json
.github/workflows/: build.yml  linter.yml
config/: story.json
migrations/2023-05-15-102003_self_role/: down.sql  up.sql
migrations/2023-05-22-004037_starboard/: down.sql  up.sql
src/: database.rs  framework.rs  index.ts  main.rs  models.rs  schema.rs  state.rs  util.ts
src/commands/: mod.rs  self_role.rs
src/entity/: Message.ts  SelfRole.ts  Starboard.ts  User.ts
src/handlers/: Database.ts
src/listeners/: mod.rs  self_role.rs  starboard.rs
src/models/: mod.rs  self_role.rs  starboard.rs
src/modules/: guild_access_join.ts  guild_access_reaction.ts  one_word_story.ts  self_role.ts  starboard_reaction_add.ts  starboard_reaction_remove.ts  suggestions.ts  suggestions_reaction_add.ts
src/structures/: Client.ts  Module.ts  Starboard.ts
