[package]
name = "hydractify"
version = "0.1.0"
authors = ["Alexandre Cavalheiro <wizardlink@hydractify.org>", "SpaceEEC <space@hydractify.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
poise = "0.5.2"
regex = "1.8.1"
serde = "1.0.163"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.3"
